# world-cup-players

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
frontend/: .env.example  index.html  package-lock.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AlbumPage.tsx  CareerPanel.tsx  FilterBar.tsx  PlayerRow.tsx  PlayerSearch.tsx  StatsTable.tsx
frontend/src/utils/: fmt.ts
scripts/: deploy-remote.sh  deploy.sh  refresh_year.py  seed_tournaments.py
src/world_cup/: __init__.py  browser.py  cli.py  config.py  db.py  models.py  pipeline.py  tournaments.py
src/world_cup/api/: __init__.py  __main__.py  app.py  auth.py  db.py  keys.py  limits.py  pagination.py  queries.py  rate_limit.py  schemas.py
src/world_cup/api/routers/: __init__.py  players.py  signup.py  stats.py  teams.py  tournaments.py
src/world_cup/sources/: __init__.py  base.py  espn.py  fbref.py
supabase/migrations/: 0001_init.sql  0002_api.sql  0003_unverified_limits.sql
tests/: conftest.py  test_api_endpoints.py  test_api_keys.py  test_cdp_client.py  test_espn_parser.py  test_fbref_parser.py  test_models.py  test_rate_limit.py  test_signup.py  test_unverified_limits.py
tests/fixtures/: espn_discipline_2022.html  espn_performance_2022.html  espn_scoring_2022.html  fbref_misc_sample.html  fbref_standard_sample.html
