[project]
name = "world-cup-players"
version = "0.1.0"
description = "Headless scraper for FIFA World Cup player stats (1970-present) into Supabase/Postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.49",        # undetected Playwright drop-in (Cloudflare-protected FBref)
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "rich>=13.9",
    "beautifulsoup4>=4.12",    # HTML table parsing (pure-Python, testable against fixtures)
]

[project.scripts]
world-cup = "world_cup.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_cup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
