[project]
name = "world-cup-players"
version = "0.1.0"
description = "Headless scraper for FIFA World Cup player stats (1970-present) into Supabase/Postgres"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "patchright>=1.49", # undetected Playwright drop-in (Cloudflare-protected FBref)
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "rich>=13.9",
    "beautifulsoup4>=4.12", # HTML table parsing (pure-Python, testable against fixtures)
    "websockets>=16.0",
]

[project.scripts]
world-cup = "world_cup.cli:main"
world-cup-api = "world_cup.api.__main__:main"

[project.optional-dependencies]
# Read-only HTTP API (FastAPI). Kept optional so the scraper install stays lean.
# Install with: uv sync --extra api
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg-pool>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27", # FastAPI TestClient transport
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/world_cup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
